--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 
-#body-page2 [href="page2.html"] { font-weight: bold;}
-#body-page3 [href="page3.html"] { color: red;}
-#body-page4 [href="page4.html"] { color: red;}
-#body-page5 [href="page5.html"] { color: red;}
+#body-page2 [href="page2.html"] { color: black;}
+#body-page3 [href="page3.html"] { color: black;}
+#body-page4 [href="page4.html"] { color: black;}
+#body-page5 [href="page5.html"] { color: black;}
