--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 
-#body-page2 [href="page2.html"] { color: black;}
-#body-page3 [href="page3.html"] { color: black;}
-#body-page4 [href="page4.html"] { color: black;}
-#body-page5 [href="page5.html"] { color: black;}
+#body-page2 [href="page2.html"],
+#body-page3 [href="page3.html"],
+#body-page4 [href="page4.html"],
+#body-page5 [href="page5.html"] { 
+	color: black;
+	font-weight: 500;
+}
