--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,9 @@
 #main-menu {
 	height: 56px;
 }
-.main-menu ul {
+#main-menu ul {
 	z-index: 1000;
     position: relative;
-    /* background-color: white; */
 }
 .card img {
 	aspect-ratio: 4/3;
